--- a/src/styles/SupportUs.css
+++ b/src/styles/SupportUs.css
@@ -22,8 +22,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 15%;
-    margin-top: 30px;
+    padding: 40px 5%;
+    margin-top: 0;
   }
   
   .CenteredGridItem {
